<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nudge</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message_form">Create a Nudge</string>
    <string name="title_activity_active_nudges">Active Nudges</string>
    <string name="title_activity_about_nudge">About Nudge</string>
    <string name="instruction_message">"No active nudges. Tap \'+\' to begin!"</string>
    <string name="who_instruction">Who would you like me to nudge?</string>
    <string name="when_instruction">When should I start nudging?</string>
    <string name="what_instruction">What should I say when I nudge them?</string>
    <string name="frequency_instruction">How often should I nudge them?</string>
    <string name="date_button_text">Select Date</string>
    <string name="contact_button_text">Select Contact</string>
    <string name="time_button_text">Select Time</string>
    <string name="subtitle_donate_to_developer">About the Developer</string>
    <string name="subtitle_donate_to_artist">About the Artist</string>
    <string name="developer_donation_text">Kevin is the main technical force behind Nudge. The conception
    of this app and its various features are under his domain Checkout his other work:</string>
    <string name="artist_donation_text">Joey is the main artistic force behind Nudge. The color
    scheme and the much improved look (including the icon) are the fruits of his labor.
    Checkout his other work: </string>
    <string name="new_nudge_instruction_text">Press this button start creating your first Nudge!
    </string>
    <string name="choose_recipient_instruction_title">Choose a Recipient</string>
    <string name="choose_recipient_instruction_text">Press this button to select a recipient
    from your contact list.Tap the black area to continue.</string>
    <string name="choose_send_datetime_instruction_title">Choose a Send Date and Time</string>
    <string name="choose_send_datetime_instruction_text">Nudge starts sending your nudges at this
    date and time.Tap the black area to continue</string>
    <string name="choose_frequency_instruction_title">Choose Frequency</string>
    <string name="choose_frequency_instruction_text">This slider determines how often to send your
    message. \'Monthly: Last Day\' sends a message the last day of each month. Tap anywhere to begin
    creating your message!</string>
    <string name="no_selection_text">None</string>
    <string name="default_frequency_text">Weekly</string>
    <string name="edit_nudge_button_text">edit</string>
    <string name="delete_nudge_button_text">delete</string>
    <string name="portfolio_button_text">Joey\'s Portfolio</string>
    <string name="developer_button_text">Kevin\'s Website</string>
    <string-array name="frequency_array">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Monthly: Last Day</item>
    </string-array>
    <string-array name="url_array">
        <item>http://behance.net/josephsabatini</item>
        <item>http://katanakdubs.herokuapp.com/</item>
    </string-array>
    <string name="privacyPolicyDescriptionString">This privacy policy governs your use of the software application Nudge (“Application”) for mobile devices that was created by Katana Software Productions. The Application is used to send scheduled text nudges to a user-designated recipient.</string>
    <string name="applicationInformationHeaderString">What information does the Application obtain and how is it used?</string>
    <string name="userProvidedInformationHeaderString">User Provided Information</string>
    <string name="userProvidedInformationDescriptionString">The Application obtains the information you provide when you download the Application. When you use the Application, you generally provide (a) your name and phone number and; (b) your contacts\' name and phone number.</string>
    <string name="automaticallyCollectedInformationHeaderString">Automatically Collected Information</string>
    <string name="automaticallyCollectedInformationDescriptionHeader">In addition, the Application may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile devices unique device ID, the IP address of your mobile device, your mobile operating system, and information about the way you use the Application.</string>
    <string name="locationInformationHeaderString">Does the Application collect precise real time location information of the device?</string>
    <string name="locationInformationDescriptionString">This Application does not collect precise information about the location of your mobile device.</string>
    <string name="thirdPartyInformationHeaderString">Do third parties see and/or have access to information obtained by the Application?</string>
    <string name="thirdPartyInformationDescriptionString">No.</string>
    <string name="automaticAdvertisingHeaderString">Automatic Data Collection and Advertising</string>
    <string name="automaticAdvertisingDescriptionString">We use AdMob for advertising. AdMob will serve ads based on your interactions with all mobile and web applications. No personal data is knowingly sent from this application to AdMob. However, clicking on an advertisement will result in some anonymized data being sent to AdMob services.</string>
    <string name="dataRententionHeaderString">Data Retention Policy, Managing Your Information</string>
    <string name="dataRententionDescriptionString">All User Provided Data is stored locally on the user\'s device and never transmitted to another device. Please note that some or all of the User Provided Data may be required in order for the Application to function properly.</string>
    <string name="childrenHeaderString">Children</string>
    <string name="childrenDescriptionString">We do not use the Application to knowingly solicit data from or market to children under the age of 13. If a parent or guardian becomes aware that his or her child has provided us with information without their consent, he or she should contact us at kevinwhite1710@gmail.com. We will delete such information from our files within a reasonable time.</string>
    <string name="securityHeaderString">Security</string>
    <string name="securityDescriptionHeader">We are concerned about safeguarding the confidentiality of your information. We provide physical, electronic, and procedural safeguards to protect information we process and maintain. For example, we limit access to this information to authorized employees and contractors who need to know that information in order to operate, develop or improve our Application. Please be aware that, although we endeavor provide reasonable security for information we process and maintain, no security system can prevent all potential security breaches.</string>
    <string name="changesHeaderString">Changes</string>
    <string name="changesDescriptionString">This Privacy Policy may be updated from time to time for any reason. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.</string>
    <string name="consentHeaderString">Your Consent</string>
    <string name="consentDescriptionString">By using the Application, you are consenting to our processing of your information as set forth in this Privacy Policy now and as amended by us. \'Processing,\' means using cookies on a computer/hand held device or using or touching information in any way, including, but not limited to, collecting, storing, deleting, using, combining and disclosing information, all of which activities will take place in the United States. If you reside outside the United States your information will be transferred, processed and stored there under United States privacy standards.</string>
    <string name="contactHeaderString">Contact Us</string>
    <string name="contactDescriptionString">If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at kevinwhite1710@gmail.com.</string>
</resources>
